--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -26,5 +26,8 @@
         "unityIcon": "Icono de juego",
         "unityTitle": "Desarrollador Unity",
         "unityDescription": "He desarrollado entornos interactivos con fines pedagógicos en la plataforma de Unity."
+    },
+    "experience": {
+        "title": "Experiencia"
     }
 }
