Se agrega las traducciones a la seccion de contact.

--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -32,5 +32,9 @@
     },
     "projects": {
         "title": "Proyectos"
+    },
+    "contact": {
+        "title": "Contacto",
+        "text": "¡No dudes en comunicarte!"
     }
 }
