--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -32,5 +32,9 @@
     },
     "projects": {
         "title": "Projects"
+    },
+    "contact": {
+        "title": "Contact",
+        "text": "Feel free to reach out!"
     }
 }
