Se arreglan los diseños de la seccion de projects y about.

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -31,7 +31,8 @@
         "title": "Experience"
     },
     "projects": {
-        "title": "Projects"
+        "title": "Projects",
+        "code": "Code"
     },
     "contact": {
         "title": "Contact",
