--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -31,7 +31,8 @@
         "title": "Experiencia"
     },
     "projects": {
-        "title": "Proyectos"
+        "title": "Proyectos",
+        "code": "Código"
     },
     "contact": {
         "title": "Contacto",
