Se arregla la seccion de experience, los hovers del navbar y las projectCard.

--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -2,6 +2,7 @@
     "nav": {
         "title": "Portafolio",
         "menuBtn": "Botón de menú",
+        "hero": "Inicio",
         "about": "Sobre mí",
         "experience": "Experiencia",
         "projects": "Proyectos",
