--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -2,6 +2,7 @@
     "nav": {
         "title": "Portfolio",
         "menuBtn": "Menu button",
+        "hero": "Home",
         "about": "About",
         "experience": "Experience",
         "projects": "Projects",
