--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -11,7 +11,7 @@
     },
     "hero": {
         "title": "Hola, soy Nicolás",
-        "description": "Soy un desarrollador Frontend de Cali, Colombia con dos años de experiencia usando React para crear aplicaciones completas y modernas. ¡Dale un vistazo a mis proyectos!",
+        "description": "Soy un desarrollador de ubicado en Cali, Colombia con más de dos años de experiencia creando aplicaciones completas y modernas en el ámbito digital. ¡Dale un vistazo a mis proyectos!",
         "contact": "Contáctame",
         "heroImage": "Imagen de mí"
     },
@@ -20,13 +20,13 @@
         "aboutImage": "Imagen sobre mí",
         "frontendIcon": "Icono de cursor",
         "frontendTitle": "Desarrollador Frontend",
-        "frontendDescription": "Soy un desarrollador Frontend con experiencia en crear y optimizar aplicaciones.",
+        "frontendDescription": "Cuento con experiencia desarrollando en tecnologías como Javascript, Typescript, React y Angular.",
         "uiIcon": "Icono de UI",
         "uiTitle": "Diseñador UI",
         "uiDescription": "He diseñado múltiples aplicaciones teniendo en cuenta la experiencia de usuario para facilitar su posterior desarrollo.",
         "unityIcon": "Icono de juego",
         "unityTitle": "Desarrollador Unity",
-        "unityDescription": "He desarrollado entornos interactivos con fines pedagógicos en la plataforma de Unity."
+        "unityDescription": "He creado entornos dinámicos e inmersivos combinando elementos visuales y funcionalidades avanzadas."
     },
     "experience": {
         "title": "Experiencia"
