Se arreglo el texto de frontend de la seccion de about y se borro la guia de los pendientes.

--- a/src/translations/en/global.json
+++ b/src/translations/en/global.json
@@ -20,7 +20,7 @@
         "aboutImage": "Image about me",
         "frontendIcon": "Cursor icon",
         "frontendTitle": "Frontend developer",
-        "frontendDescription": "I have experience developing in technologies such as Javascript, Typescript, React and Angular.",
+        "frontendDescription": "I have experience developing in technologies such as Javascript, Typescript, React, Next and Angular.",
         "uiIcon": "UI icon",
         "uiTitle": "UI designer",
         "uiDescription": "I have designed multiple aplications considering the user experience to facilitate their subsequent development.",
