--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -20,7 +20,7 @@
         "aboutImage": "Imagen sobre mí",
         "frontendIcon": "Icono de cursor",
         "frontendTitle": "Desarrollador Frontend",
-        "frontendDescription": "Cuento con experiencia desarrollando en tecnologías como Javascript, Typescript, React y Angular.",
+        "frontendDescription": "Cuento con experiencia desarrollando en tecnologías como Javascript, Typescript, React, Next y Angular.",
         "uiIcon": "Icono de UI",
         "uiTitle": "Diseñador UI",
         "uiDescription": "He diseñado múltiples aplicaciones teniendo en cuenta la experiencia de usuario para facilitar su posterior desarrollo.",
