Se corrige la funcionalidad de la altura de los li de la seccion de about.

--- a/src/translations/es/global.json
+++ b/src/translations/es/global.json
@@ -11,7 +11,7 @@
     },
     "hero": {
         "title": "Hola, soy Nicolás",
-        "description": "Soy un desarrollador de ubicado en Cali, Colombia con más de dos años de experiencia creando aplicaciones completas y modernas en el ámbito digital. ¡Dale un vistazo a mis proyectos!",
+        "description": "Soy un desarrollador ubicado en Cali, Colombia con más de dos años de experiencia creando aplicaciones completas y modernas en el ámbito digital. ¡Dale un vistazo a mis proyectos!",
         "contact": "Contáctame",
         "heroImage": "Imagen de mí"
     },
